# Lightup

./: .clang-format  AndroidManifest.xml  CMakeLists.txt  README.md  env.sh  game.css  game.html  game_sdl.c  game_solve_tmp.c  game_text.c  lightup.js  mobile.css  wrapper.c
assets/: level1.txt  level4.txt  level6.txt  level7.txt  level8.txt
font/: CMakeLists.txt
game_save/: default_solution.txt
img/: CMakeLists.txt
jni/src/: Android.mk
jni/src/lightup-06e/: .gitignore  CMakeLists.txt  game_sdl.c  game_solve.c  game_text.c
jni/src/lightup-06e/game_save/: mark_test.txt
jni/src/lightup-06e/libSDLUtils/: SDLMenu.c  SDLMenu.h  SDLUtils.c  SDLUtils.h  env.h
jni/src/lightup-06e/libgame/: game_private.c  game_random.h  game_tools.c  game_tools.h
jni/src/lightup-06e/test/: game_solver_test.c  game_test.c  game_test.h  game_test_v1.c  game_test_v2.c
levels/: CMakeLists.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
libSDLUtils/: CMakeLists.txt  SDLMenu.c  SDLMenu.h  SDLUtils.c  SDLUtils.h  env.h
libgame/: game.c  game.h  game_aux.c  game_ext.c  game_private.c  game_private.h  game_random.c  game_random.h  game_tools.c
libstack/: queue.c
src/: game.c  game_ext.c  game_private.c  game_private.h
test/: CMakeLists.txt  game_examples.c  game_examples.h  game_solver_test.c  game_test.c  game_test.h  game_test_aux.c  game_test_io.c  game_test_v1.c  game_test_v2.c
